css/screenshot.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900);
@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
.roboto {
  font-family: "Roboto" !important;
}

.roboto-c {
  font-family: "Roboto Condensed" !important;
}

.fw-100 {
  font-weight: 100;
}

.fw-300 {
  font-weight: 300;
}

.fw-400 {
  font-weight: 400;
}

.fw-500 {
  font-weight: 500;
}

.fw-700 {
  font-weight: 700;
}

.fw-900 {
  font-weight: 900;
}

.body {
  line-height: 20px;
}

.container {
  background-color: green;
}

.screenShotContainer {
	position: relative;
	line-height: normal;
	left: 0px;
	right: 0px;
	bottom: 0px;
	height: auto;
	margin-top: 10px;
	background-image: url("../images/screenshot/phone_bg.png");
	background-size: 100% 100%;
}

.screenShotContainer:before {
  content: "";
  display: block;
  padding-top: 187.5%;
  /* keep original ratio of 1:1.875*/
}

.screenShotContainer .backgroundLayer {
  position: absolute;
  left: 12.5%;
  top: 13.6%;
  width: 75.5%;
  height: 71.15%;
  border-radius: 3px;
  overflow: hidden;
  z-index: 1;
}
.screenShotContainer .backgroundLayer:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-image: url("../images/screenshot/sample_content_bg.png"), url("../images/screenshot/content_bg_darker.png");
  background-size: cover;
  background-blend-mode: darken;
  -webkit-filter: blur(1px);
          filter: blur(1px);
  -webkit-transform: scale(1.1);
      -ms-transform: scale(1.1);
          transform: scale(1.1);
}
.screenShotContainer .backgroundLayer .topLayer {
  position: relative;
  left: 0;
  top: 4%;
  width: 100%;
  height: 29%;
  overflow: hidden;
  background-color: transperent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
}
.screenShotContainer .backgroundLayer .topLayer .topLayerLogo {
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
  margin-top: 15%;
  width: 25%;
  height: 48.82%;
}
.screenShotContainer .backgroundLayer .topLayer .topLayerLogo img {
  width: 100%;
  height: 100%;
  border-radius: 8%;
}
.screenShotContainer .backgroundLayer .topLayer .headerTitle {
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
		font-size: 5vw;
		font-weight: 400;
		margin-top: 10%;
  		color: white;
}

.chatLayer {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: transperent;
  overflow: hidden;
  z-index: 21;
}
.chatLayer:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: 20;
  background-image: url("../images/screenshot/sample_content_chat.png");
  background-size: cover;
}

.newsLayer {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: transperent;
  overflow: hidden;
  z-index: 21;
}
.newsLayer .newsContainer {
  position: relative;
  top: 37%;
  width: 100%;
  height: 63%;
  z-index: 22;
  background-color: transperent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
}
.newsLayer .newsContainer .flyer {
  -webkit-align-self: center;
      -ms-flex-item-align: center;
          align-self: center;
  width: 90%;
  min-height: 55%;
  margin-top: 5%;
  margin-bottom: 5%;
  background-size: cover;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-justify-content: space-around;
      -ms-flex-pack: distribute;
          justify-content: space-around;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
      -ms-flex-align: stretch;
          align-items: stretch;
}
.newsLayer .newsContainer .flyer .spacer {
  -webkit-box-flex: 8;
  -webkit-flex-grow: 8;
      -ms-flex-positive: 8;
          flex-grow: 8;
}
.newsLayer .newsContainer .flyer .details {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  top: 50%;
  width: 100%;
text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
      -ms-flex-flow: column;
          flex-flow: column;
}
.newsLayer .newsContainer .flyer .details .flayerTitle {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  width: 100%;
  font-size: 10px;
  font-size: 14.3856px;
  margin: 1.92px 3.84px 0 3.84px;
  color: white;
}
.newsLayer .newsContainer .flyer .details .meta-details {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}
.newsLayer .newsContainer .flyer .details .meta-details .meta-box {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
      -ms-flex-flow: row;
          flex-flow: row;
  width: auto;
  margin: 0 3.83616px 0 3.83616px;
}
.newsLayer .newsContainer .flyer .details .meta-details .meta-box .md-time {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  position: relative;
}
.newsLayer .newsContainer .flyer .details .meta-details .meta-box .md-time .md-text {
  float: left;
  color: white;
  font-size: 6px;
  font-size: 9.5904px;
  min-height: auto;
  text-align: left;
  margin-left: 3.83616px;
}
/* ... */

